@@ -1,5 +1,5 @@
 name    = FastGlob
-author  = Nicolas R <atoomic@cpan.org>
+author  = Marc Mengel <mengel@fnal.gov>
 license = Perl_5
 copyright_holder = Marc Mengel
 copyright_year   = 1999
