@@ -9,11 +9,6 @@ BEGIN {
     # VERSION: generated by DZP::OurPkgVersion
 }
 
-
-=head1 NAME
-
-FastGlob - A faster glob() implementation
-
 =head1 SYNOPSIS
 
         use FastGlob qw(glob);
@@ -55,17 +50,6 @@ And for MacOS to:
 =head1 INSTALLATION
 
 Copy this module to the Perl 5 Library directory.
-
-=head1 COPYRIGHT
-
-Copyright (c) 1997-1999 Marc Mengel. All rights reserved.
-
-This library is free software; you can redistribute it and/or modify it under
-the same terms as Perl itself.
-
-=head1 AUTHOR
-
-Marc Mengel E<lt>F<mengel@fnal.gov>E<gt>
 
 =cut
 
